Added more integrations

--- a/index.html
+++ b/index.html
@@ -157,6 +157,12 @@
       </div>
     </div>
 
+    <!-- 
+
+      CI/CD
+
+    -->
+
     <div class="container">
       <div class="section-header">
         <h2 class="section-title">
@@ -221,6 +227,12 @@
       </div>
     </div>
 
+    <!--
+
+      Build Tools
+
+    -->
+
     <div class="container">
       <div class="section-header">
         <h2 class="section-title">
@@ -253,6 +265,70 @@
               <a class="link source-link" href="https://plugins.gradle.org/plugin/com.contrastsecurity.contrastplugin">gradle.org</a><br/>
               <a class="link source-link" href="https://github.com/Contrast-Security-OSS/contrast-gradle-plugin">Source code</a><br/>
               <a class="link source-link" href="https://docs.contrastsecurity.com/tools-build.html#gradleo">Documentation</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- 
+
+      CI/CD
+
+    -->
+
+    <div class="container">
+      <div class="section-header">
+        <h2 class="section-title">
+          Team Chat / Ops
+        </h2>
+        <div>
+          <p class="lead">
+            Notify chat rooms or page on-call personnel when attacks or vulnerabilities happen
+          </p>
+        </div>
+      </div>
+
+      <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <img src="img/victorops.png" class="ide-icon-big">
+            <h2 class="display-5">VictorOps</h2>
+
+            <div class="links">
+              <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#victorops">Documentation</a>
+            </div>
+          </div>
+        </div>
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <img src="img/slack.png" class="ide-icon-big">
+            <h2 class="display-5">Slack</h2>
+
+            <div class="links">
+              <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#slack">Documentation</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <img src="img/teams.png" class="ide-icon-big">
+            <h2 class="display-5">Microsoft Teams</h2>
+
+            <div class="links">
+              <a class="link source-link" href="https://docs.contrastsecurity.com/">(Coming Soon)</a>
+            </div>
+          </div>
+        </div>
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <img src="img/webhook.png" class="ide-icon-big">
+            <h2 class="display-5">Webhooks</h2>
+
+            <div class="links">
+              <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#webhook">Documentation</a>
             </div>
           </div>
         </div>
@@ -434,6 +510,83 @@
             <div class="links">
             	
             	<a href="https://docs.contrastsecurity.com/admin-orgintegrations.html#central" class="link source-link">Documentation</a><br/>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <img src="img/azure.png" class="ide-icon">
+            <h2 class="display-5">VSTS Backlogs</h2>
+
+            <div class="links">
+
+                <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#jira">Documentation</a><br/>
+            </div>
+          </div>
+        </div>
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <img src="img/bugzilla.png" class="ide-icon">
+            <h2 class="display-5">Bugzilla</h2>            
+            <div class="links">
+
+                <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#github">Documentation</a><br/>
+            </div>
+          </div>
+        </div>
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <img src="img/serena.png" class="ide-icon">
+            <h2 class="display-5">Serena</h2>
+            <div class="links">
+              
+              <a href="https://docs.contrastsecurity.com/admin-orgintegrations.html#central" class="link source-link">Documentation</a><br/>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+    <!--
+
+      Contrast Docs
+
+    -->
+
+    <div class="container">
+      <div class="section-header">
+        <h2 class="section-title">
+          Documentation
+        </h2>
+        <div>
+          <p class="lead">
+            Got questions? we've got answers.
+          </p>
+        </div>
+      </div>
+
+      <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <h2 class="display-5">OpenDocs</h2>
+            <p class="lead item-lead">Comprehensive documentation about all things Contrast.</p>
+
+            <div class="links">
+              <a class="link source-link" href="https://docs.contrastsecurity.com/search?q=a:contrast-maven-plugin">OpenDocs</a><br/>
+            </div>
+          </div>
+        </div>
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <h2 class="display-5">REST API</h2>
+            <p class="lead item-lead">USe our API to build and automate your own processes.</p>
+
+            <div class="links">
+              <a class="link source-link" href="https://api.contrastsecurity.com/">API Documentation</a><br/>
             </div>
           </div>
         </div>
