--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
               <a class="link source-link" href="https://search.maven.org/search?q=a:contrast-maven-plugin">Maven Central</a><br/>
               <a class="link source-link" href="https://github.com/Contrast-Security-OSS/contrast-maven-plugin">Source code</a><br/>
               <a class="link source-link" href="https://docs.contrastsecurity.com/tools-build.html#maven">Documentation</a>
+              <a class="link source-link" href="https://github.com/Contrast-Security-OSS/vulnerable-spring-boot-application">Sample project</a>
             </div>
           </div>
         </div>
@@ -265,6 +266,7 @@
               <a class="link source-link" href="https://plugins.gradle.org/plugin/com.contrastsecurity.contrastplugin">gradle.org</a><br/>
               <a class="link source-link" href="https://github.com/Contrast-Security-OSS/contrast-gradle-plugin">Source code</a><br/>
               <a class="link source-link" href="https://docs.contrastsecurity.com/tools-build.html#gradleo">Documentation</a>
+              <a class="link source-link" href="https://github.com/Contrast-Security-OSS/Contrast-Sample-Gradle-Application">Sample project</a>
             </div>
           </div>
         </div>
@@ -522,7 +524,7 @@
 
             <div class="links">
 
-                <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#jira">Documentation</a><br/>
+                <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#vsts-tfs">Documentation</a><br/>
             </div>
           </div>
         </div>
@@ -542,7 +544,7 @@
             <h2 class="display-5">Serena</h2>
             <div class="links">
               
-              <a href="https://docs.contrastsecurity.com/admin-orgintegrations.html#central" class="link source-link">Documentation</a><br/>
+              <a href="https://docs.contrastsecurity.com/admin-orgintegrations.html#serena" class="link source-link">Documentation</a><br/>
             </div>
           </div>
         </div>
