Add Gradle and Maven example projects

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <div class="links">
               <a class="link source-link" href="https://search.maven.org/search?q=a:contrast-maven-plugin">Maven Central</a><br/>
               <a class="link source-link" href="https://github.com/Contrast-Security-OSS/contrast-maven-plugin">Source code</a><br/>
-              <a class="link source-link" href="https://docs.contrastsecurity.com/tools-build.html#maven">Documentation</a>
+              <a class="link source-link" href="https://docs.contrastsecurity.com/tools-build.html#maven">Documentation</a><br/>
               <a class="link source-link" href="https://github.com/Contrast-Security-OSS/vulnerable-spring-boot-application">Sample project</a>
             </div>
           </div>
@@ -265,7 +265,7 @@
             <div class="links">
               <a class="link source-link" href="https://plugins.gradle.org/plugin/com.contrastsecurity.contrastplugin">gradle.org</a><br/>
               <a class="link source-link" href="https://github.com/Contrast-Security-OSS/contrast-gradle-plugin">Source code</a><br/>
-              <a class="link source-link" href="https://docs.contrastsecurity.com/tools-build.html#gradleo">Documentation</a>
+              <a class="link source-link" href="https://docs.contrastsecurity.com/tools-build.html#gradleo">Documentation</a><br/>
               <a class="link source-link" href="https://github.com/Contrast-Security-OSS/Contrast-Sample-Gradle-Application">Sample project</a>
             </div>
           </div>
