--- a/index.html
+++ b/index.html
@@ -134,6 +134,17 @@
         </div>
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
           <div class="my-3 py-3">
+            <img src="img/js.png" class="ide-icon">
+            <h2 class="display-5 contrast-item-heading">JavaScript</h2>
+
+            <div class="links">
+              <a class="link source-link" href="https://github.com/Contrast-Security-OSS/contrast-sdk-javascript">Source code</a><br>
+              <a class="link source-link" href="https://www.npmjs.com/package/contrast-sdk">NPM</a>
+            </div>
+          </div>
+        </div>
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
             <img src="img/dot-net.png" class="ide-icon">
             <h2 class="display-5 contrast-item-heading">.Net</h2>
 
