added more test apps we use on node team

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       </div>
     </div>
 
-    <!-- 
+    <!--
 
       CI/CD
 
@@ -273,7 +273,7 @@
       </div>
     </div>
 
-    <!-- 
+    <!--
 
       CI/CD
 
@@ -411,11 +411,46 @@
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
           <div class="my-3 py-3">
             <img src="img/js.png" class="ide-icon">
-            <h2 class="display-5 contrast-item-heading">Node Test Bench</h2>
-            <p class="lead item-lead">Intentionally vulnerable Node applications.<br/>&nbsp;</p>
+            <h2 class="display-5 contrast-item-heading">Express Test Bench</h2>
+            <p class="lead item-lead">Intentionally vulnerable Express application.<br/>&nbsp;</p>
 
             <div class="links">
               <a class="link source-link" href="https://github.com/Contrast-Security-OSS/NodeTestBench">Source code</a>
+            </div>
+          </div>
+        </div>
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <img src="img/js.png" class="ide-icon">
+            <h2 class="display-5 contrast-item-heading">Hapi Test Bench</h2>
+            <p class="lead item-lead">Intentionally vulnerable Hapi application.<br/>&nbsp;</p>
+
+            <div class="links">
+              <a class="link source-link" href="https://github.com/Contrast-Security-OSS/HapiTestBench">Source code</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <img src="img/js.png" class="ide-icon">
+            <h2 class="display-5 contrast-item-heading">Koa Test Bench</h2>
+            <p class="lead item-lead">Intentionally vulnerable Koa application.<br/>&nbsp;</p>
+
+            <div class="links">
+              <a class="link source-link" href="https://github.com/Contrast-Security-OSS/KoaTestBench">Source code</a>
+            </div>
+          </div>
+        </div>
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <img src="img/js.png" class="ide-icon">
+            <h2 class="display-5 contrast-item-heading">Kraken Test Bench</h2>
+            <p class="lead item-lead">Intentionally vulnerable Kraken application.<br/>&nbsp;</p>
+
+            <div class="links">
+              <a class="link source-link" href="https://github.com/Contrast-Security-OSS/KrakenTestBench">Source code</a>
             </div>
           </div>
         </div>
@@ -498,7 +533,7 @@
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
           <div class="my-3 py-3">
             <img src="img/github.png" class="ide-icon">
-            <h2 class="display-5">GitHub</h2>            
+            <h2 class="display-5">GitHub</h2>
             <div class="links">
 
                 <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#github">Documentation</a><br/>
@@ -510,7 +545,7 @@
             <img src="img/ca-agile-central.png" class="ide-icon">
             <h2 class="display-5">CA Agile Central</h2>
             <div class="links">
-            	
+
             	<a href="https://docs.contrastsecurity.com/admin-orgintegrations.html#central" class="link source-link">Documentation</a><br/>
             </div>
           </div>
@@ -531,7 +566,7 @@
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
           <div class="my-3 py-3">
             <img src="img/bugzilla.png" class="ide-icon">
-            <h2 class="display-5">Bugzilla</h2>            
+            <h2 class="display-5">Bugzilla</h2>
             <div class="links">
 
                 <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#github">Documentation</a><br/>
@@ -543,7 +578,7 @@
             <img src="img/serena.png" class="ide-icon">
             <h2 class="display-5">Serena</h2>
             <div class="links">
-              
+
               <a href="https://docs.contrastsecurity.com/admin-orgintegrations.html#serena" class="link source-link">Documentation</a><br/>
             </div>
           </div>
