--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   </head>
 
-  <body>
+  <div>
 
     <nav class="site-header sticky-top py-1">
       <div class="container d-flex flex-column flex-md-row justify-content-between">
@@ -324,16 +324,6 @@
           </div>
         </div>
       </div>
-      <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
-        <div class="my-3 py-3">
-          <img src="img/pagerduty.png" class="ide-icon-big">
-          <h2 class="display-5">PagerDuty</h2>
-
-          <div class="links">
-            <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#pagerduty">Documentation</a>
-          </div>
-        </div>
-      </div>
     </div>
       <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
@@ -358,7 +348,18 @@
         </div>
       </div>
     </div>
+  <div>
+    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+      <div class="my-3 py-3">
+        <img src="img/pagerduty.png" class="ide-icon-big">
+        <h2 class="display-5">PagerDuty</h2>
 
+        <div class="links">
+          <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#pagerduty">Documentation</a>
+        </div>
+      </div>
+    </div>
+  </div>
     <div class="container">
       <div class="section-header">
         <h2 class="section-title">
