Add Microsoft Teams documentation link

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             <h2 class="display-5">Microsoft Teams</h2>
 
             <div class="links">
-              <a class="link source-link" href="https://docs.contrastsecurity.com/">(Coming Soon)</a>
+              <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#microsoftteams">Documentation</a>
             </div>
           </div>
         </div>
