--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
         <div class="my-3 py-3">
-          <img src="img/java.png" class="ide-icon">
+          <img src="img/java.png" class="ide-icon-big">
           <h2 class="display-5">Java</h2>
           <div class="links">
 
@@ -72,7 +72,7 @@
 
       <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
         <div class="my-3 py-3">
-          <img src="img/net.png" class="ide-icon">
+          <img src="img/net.png" class="ide-icon-bigger">
           <h2 class="display-5">.NET</h2>
 
           <div class="links">
@@ -84,7 +84,7 @@
 
       <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
         <div class="my-3 py-3">
-          <img src="img/netcore.png" class="ide-icon">
+          <img src="img/netcore.png" class="ide-icon-bigger">
           <h2 class="display-5">.NET Core</h2>
 
           <div class="links">
@@ -101,7 +101,7 @@
 
       <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
         <div class="my-3 py-3">
-<!--          <img src="img/node.png" class="ide-icon">-->
+          <img src="img/node.png" class="ide-icon-big">
           <h2 class="display-5">Node</h2>
           <div class="links">
 
@@ -112,7 +112,7 @@
 
       <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
         <div class="my-3 py-3">
-          <img src="img/ruby.png" class="ide-icon">
+          <img src="img/ruby.png" class="ide-icon-big">
           <h2 class="display-5">Ruby</h2>
 
           <div class="links">
@@ -124,7 +124,7 @@
 
       <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
         <div class="my-3 py-3">
-          <img src="img/python.png" class="ide-icon">
+          <img src="img/python.png" class="ide-icon-big">
           <h2 class="display-5">Python</h2>
 
           <div class="links">
@@ -202,7 +202,7 @@
       <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
           <div class="my-3 py-3">
-            <img src="img/azure-pipelines.png" class="ide-icon-big">
+            <img src="img/azure-pipelines.png" class="ide-icon-wide">
             <h2 class="display-5">Azure Pipelines</h2>
 
             <div class="links">
@@ -314,7 +314,7 @@
 
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
           <div class="my-3 py-3">
-            <img src="img/github.png" class="ide-icon">
+            <img src="img/github.png" class="ide-icon-big">
             <h2 class="display-5">GitHub</h2>
             <div class="links">
 
@@ -325,7 +325,7 @@
 
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
           <div class="my-3 py-3">
-            <img src="img/azure-boards.png" class="ide-icon">
+            <img src="img/azure-boards.png" class="ide-icon-wide">
             <h2 class="display-5">Azure Boards</h2>
 
             <div class="links">
@@ -337,7 +337,7 @@
 
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
           <div class="my-3 py-3">
-            <img src="img/jira.jpg" class="ide-icon">
+            <img src="img/jira.png" class="ide-icon-wide">
             <h2 class="display-5">JIRA</h2>
 
             <div class="links">
@@ -431,7 +431,7 @@
           </div>
           <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
             <div class="my-3 py-3">
-              <img src="img/sumo-logic-logo.jpg" class="ide-icon-big">
+              <img src="img/sumo-logic-logo.png" class="ide-icon-wide">
               <h2 class="display-5">Sumo Logic</h2>
 
               <div class="links">
