fixed one of the sections

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light contrastron">
       <div class="col-md-8 p-lg-5 mx-auto my-5 contrastron-sub">
-        <h2 class="display-4 font-weight-normal contrastron-headline">Contrast Security for Developers</h2>
+        <h2 class="display-4 font-weight-normal contrastron-headline">Contrast Security</h2>
         <p class="contrastron-lead font-weight-normal">Use our tools and open-source software to help secure your applications.</p>
       </div>
     </div>
@@ -346,6 +346,47 @@
             </div>
           </div>
         </div>
+
+      </div>
+
+      <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+
+      <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+        <div class="my-3 py-3">
+          <img src="img/ca-agile-central.png" class="ide-icon-wide">
+          <h2 class="display-5">CA Agile Central</h2>
+          <div class="links">
+
+            <a href="https://docs.contrastsecurity.com/admin-orgintegrations.html#central" class="link source-link">Documentation</a><br/>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+        <div class="my-3 py-3">
+          <img src="img/bugzilla.png" class="ide-icon-big">
+          <h2 class="display-5">Bugzilla</h2>
+          <div class="links">
+
+            <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#bugzilla">Documentation</a><br/>
+          </div>
+        </div>
+      </div>
+
+
+
+
+      <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+        <div class="my-3 py-3">
+          <img src="img/serena.png" class="ide-icon-big">
+          <h2 class="display-5">Serena</h2>
+          <div class="links">
+
+            <a href="https://docs.contrastsecurity.com/admin-orgintegrations.html#serena" class="link source-link">Documentation</a><br/>
+          </div>
+        </div>
+      </div>
       </div>
 
 
@@ -495,56 +536,6 @@
               </div>
             </div>
           </div>
-
-
-
-
-        <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-
-
-          <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
-            <div class="my-3 py-3">
-              <img src="img/ca-agile-central.png" class="ide-icon">
-              <h2 class="display-5">CA Agile Central</h2>
-              <div class="links">
-
-                <a href="https://docs.contrastsecurity.com/admin-orgintegrations.html#central" class="link source-link">Documentation</a><br/>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
-            <div class="my-3 py-3">
-              <img src="img/bugzilla.png" class="ide-icon">
-              <h2 class="display-5">Bugzilla</h2>
-              <div class="links">
-
-                <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#bugzilla">Documentation</a><br/>
-              </div>
-            </div>
-          </div>
-
-
-
-
-          <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
-            <div class="my-3 py-3">
-              <img src="img/serena.png" class="ide-icon">
-              <h2 class="display-5">Serena</h2>
-              <div class="links">
-
-                <a href="https://docs.contrastsecurity.com/admin-orgintegrations.html#serena" class="link source-link">Documentation</a><br/>
-              </div>
-            </div>
-          </div>
-
-
-
-
-
-
-        </div>
       </div>
 
 
