--- a/index.html
+++ b/index.html
@@ -78,16 +78,17 @@
         </div>
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
           <div class="my-3 py-3">
-            <img src="img/eclipse.png" class="ide-icon">
-            <h2 class="display-5 contrast-item-heading">Eclipse</h2>
-            <p class="lead item-lead">The Contrast for Eclipse plugin lists the vulnerabilities from your application directly in your Eclipse environment.</p>
+            <img src="img/vsmac.png" class="ide-icon">
+            <h2 class="display-5 contrast-item-heading">Visual Studio for Mac</h2>
+            <p class="lead item-lead">Launch a professional environment tailored to the Mac, now with Contrast.</p>
 
             <div class="links">
-              <a class="link source-link" href="https://marketplace.eclipse.org/content/contrast-eclipse">Eclipse plugin</a><br/>
-              <a class="link source-link" href="https://github.com/Contrast-Security-OSS/ide-plugin-eclipse2">Source code</a>
+              <a class="link source-link" href="https://github.com/Contrast-Security-OSS/contrast-vsmac-plugin-distro/releases">Download</a><br/>
             </div>
           </div>
         </div>
+      </div>
+      <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
           <div class="my-3 py-3">
             <img src="img/intellij.png" class="ide-icon">
@@ -96,6 +97,18 @@
 
             <div class="links">
               <a class="link source-link" href="https://plugins.jetbrains.com/plugin/10335-contrast">IntelliJ Plugin</a><br/>
+            </div>
+          </div>
+        </div>
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+          <div class="my-3 py-3">
+            <img src="img/eclipse.png" class="ide-icon">
+            <h2 class="display-5 contrast-item-heading">Eclipse</h2>
+            <p class="lead item-lead">The Contrast for Eclipse plugin lists the vulnerabilities from your application directly in your Eclipse environment.</p>
+
+            <div class="links">
+              <a class="link source-link" href="https://marketplace.eclipse.org/content/contrast-eclipse">Eclipse plugin</a><br/>
+              <a class="link source-link" href="https://github.com/Contrast-Security-OSS/ide-plugin-eclipse2">Source code</a>
             </div>
           </div>
         </div>
