added contrastcli tool

--- a/index.html
+++ b/index.html
@@ -770,6 +770,18 @@
               </div>
           </div>
 
+          <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+                <div class="my-3 py-3">
+                  <img src="img/contrastCLI-logo.png" class="ide-icon-cli">
+                  <br>
+                  <h2 class="display-5">Contrast CLI</h2>
+                  <div class="links">
+                      <a class="link source-link" href="https://www.npmjs.com/package/@contrast/contrast-cli">NPM</a><br>
+                      <a class="link source-link" href="https://docs.contrastsecurity.com/tools-cli.html#contrast-cli">Documentation</a>
+                  </div>
+              </div>
+          </div>
+
       </div>
   </div>
 
