Line up headings

--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
           <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
               <div class="my-3 py-3">
                   <img src="img/sheepdog.png" class="ide-icon-big">
-                  <h2 class="display-5 contrast-item-heading">Sheepdog</h2>
+                  <h2 class="display-5 contrast-item-heading">Sheepdog<br/><br/></h2>
                   <p class="lead item-lead">Sheepdog is a simple tool to generate normal and attack traffic for OWASP WebGoat</p>
 
                   <div class="links">
@@ -892,7 +892,7 @@
           <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
               <div class="my-3 py-3">
                   <img src="img/nodejs.png" class="ide-icon-wide">
-                  <h2 class="display-5 contrast-item-heading">Node Dvnr </h2>
+                  <h2 class="display-5 contrast-item-heading">Node Dvnr<br/><br/></h2>
                   <p class="lead item-lead">Standalone utility for assessing Node app compatibility with Contrast</p>
 
                   <div class="links">
